--- a/estilo/main.css
+++ b/estilo/main.css
@@ -1,9 +1,19 @@
 body{
     margin: 0px;
     padding: 0px;
-    width: 100%;
+    /* width: 100%; */
+    overflow-x: hidden;
 }
-
+._container{
+    width: 100%;
+    padding: 3% 3%;
+    text-align: center;
+}
+._container1{
+    width: 100%;
+    padding: 3% 10%;
+    text-align: center;
+}
 .site-title{
     font-family: 'Unica One', cursive;
     font-size: 70px;
@@ -23,22 +33,24 @@ body{
 .carousel-item p{
     font-family: 'Major Mono Display', monospace;
     font-size: 25px;
-
 }
 .navbar a{
     color: white;
     font-size: 20px;
 }
+.navbar a:hover{
+    color: white;
+    font-size: 20px;
+}
+.carousel-caption{
+    top: 25%;
+}
 .animation-title{
     animation-timing-function: linear;
-    position: static;
-    top: 30%;
     animation: animation-title 5s;
 }
 .animation-subtitle{
     animation-timing-function: ease;
-    position: static;
-    top: 50%;
     animation: animation-subtitle 5s;
 }
 @keyframes animation-title{
@@ -51,8 +63,52 @@ body{
     50% {left: -300px;}
     100% {left: 0px;}
 }
-#corpo{
-    
+.texto-parallax{
+    top: 50%;
+}
+.quemSomos:before,
+.quemSomos:after {
+    content: "";
+    display: table;
+} 
+.quemSomos:after {
+    clear: both;
+}
+.quemSomos {
+     zoom: 1; /* For IE 6/7 (trigger hasLayout) */
+}
+.quemSomos .fundador{
+    float: left;
+    width: 50%;
+    padding: 2%;
+}
+.fundador {
+    width: 25%;
+    padding: 3%;
+}
+.fundador .texto{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 22px;
+}
+.naja{
+    float: left;
+    width: 30%;
+    height: 30%;
+    padding: 1%;
+}
+.naja .najas{
+    width: 100%;
+    height: 100%;
+    border-radius: 70%;
+}
+.fundador .baixar{
+    position: relative;
+    top: 200px;
+}
+.texto-parallax h1{
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    text-align: center;
 }
 #bloco-um .card-body h5{
     font-family: 'Major Mono Display', monospace;
@@ -74,15 +130,26 @@ body{
     font-size: 30px;
     text-align: left;
 }
+.parallax-window {
+    min-height: 250px;
+    background: transparent;
+}
+.parallax-window1 {
+    min-height: 200px;
+    background: transparent;
+}
+.parallax-window2 {
+    min-height: 200px;
+    background: transparent;
+}
+.parallax-window3 {
+    min-height: 200px;
+    background: transparent;
+}
 .card-img-overlay p{
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 25px;
     text-align: center;
-}
-.grow:hover{
-    -webkit-transform: scale(1.3);
-    -ms-transform: scale(1.3);
-    transform: scale(1.3);
 }
 .rounded-circle{
     height: 120px;
